--- a/requirements.txt
+++ b/requirements.txt
@@ -12,24 +12,26 @@ PyMuPDF==1.23.8
 python-docx==1.1.0
 docx2txt==0.8
 
-# Text processing and embeddings (RESTORED)
+# Text processing and embeddings (optimized versions)
 sentence-transformers==2.2.2
 transformers==4.36.2
 torch==2.1.2
 numpy==1.24.4
 pandas==2.1.4
 
-# Vector database (RESTORED ChromaDB)
+# Vector database (ChromaDB)
 chromadb==0.4.18
 
 # AI and ML
 openai==1.3.7
 huggingface-hub==0.19.4
 
+# Search and retrieval
+rank-bm25==0.2.2
+
 # Utilities
 python-dotenv==1.0.0
 pydantic==2.5.2
 requests==2.31.0
 psutil==5.9.6
-rank-bm25==0.2.2
 tiktoken==0.5.2
