--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,27 @@
-# FastAPI and web framework
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-multipart==0.0.6
 httpx==0.25.2
-
-# Document processing (compatible versions)
 langchain==0.1.20
-langchain-community==0.0.38
+langchain-community==0.2.10
 langchain-text-splitters==0.0.1
 PyMuPDF==1.23.8
 python-docx==1.1.0
 docx2txt==0.8
-
-# Text processing and embeddings (optimized versions)
 sentence-transformers==2.2.2
 transformers==4.36.2
 torch==2.1.2
 numpy==1.24.4
 pandas==2.1.4
-
-# Vector database (ChromaDB)
-chromadb==0.4.18
-
-# AI and ML
-openai==1.3.7
+chromadb==0.4.22
+openai==1.35.0
 huggingface-hub==0.19.4
-
-# Search and retrieval
 rank-bm25==0.2.2
-
-# Utilities
 python-dotenv==1.0.0
 pydantic==2.5.2
 requests==2.31.0
 psutil==5.9.6
 tiktoken==0.5.2
+aiofiles==23.2.1
+markdown==3.5.1
+python-jose==3.3.0
