--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,6 @@ transformers==4.36.2
 torch==2.1.2
 numpy==1.24.4
 pandas==2.1.4
-chromadb==0.4.22
 openai==1.35.0
 huggingface-hub==0.19.4
 rank-bm25==0.2.2
@@ -27,4 +26,6 @@ markdown==3.5.1
 python-jose==3.3.0
 scikit-learn==1.3.2
 cachetools==5.3.2
-psutil==5.9.6
+pinecone-client==2.2.4
+redis==5.0.1
+aiohttp==3.9.1
