--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ transformers==4.36.2
 torch==2.1.2
 numpy==1.24.4
 pandas==2.1.4
-openai==1.35.0
+openai>=1.35.0
 huggingface-hub==0.19.4
 rank-bm25==0.2.2
 python-dotenv==1.0.0
@@ -22,8 +22,6 @@ requests==2.31.0
 psutil==5.9.6
 tiktoken==0.5.2
 aiofiles==23.2.1
-markdown==3.5.1
-python-jose==3.3.0
 scikit-learn==1.3.2
 cachetools==5.3.2
 pinecone-client==2.2.4
