--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ tiktoken==0.5.2
 aiofiles==23.2.1
 scikit-learn==1.3.2
 cachetools==5.3.2
-pinecone-client==2.2.4
+pinecone-client>=3.0.0  # Updated for better compatibility
 redis==5.0.1
 aiohttp==3.9.1
+cross-encoder>=1.2.0    # Added for reranking
