--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ python-docx==1.1.0
 docx2txt==0.8
 
 # AI/ML stack
-sentence-transformers==2.2.2
+sentence-transformers==2.2.2  # This includes CrossEncoder functionality
 transformers==4.36.2
 torch==2.1.2
 openai>=1.35.0
@@ -25,7 +25,7 @@ huggingface-hub==0.19.4
 
 # Search and ranking
 rank-bm25==0.2.2
-cross-encoder>=1.2.0
+# REMOVED: cross-encoder>=1.2.0  # This line was causing the error
 
 # Data processing
 numpy==1.24.4
@@ -42,6 +42,6 @@ aiofiles==23.2.1
 cachetools==5.3.2
 
 # Vector/Cache stores (compatible versions)
-pinecone-client==2.2.4  # Compatible with your pinecone.init() syntax
+pinecone-client==2.2.4
 redis==5.0.1
 aiohttp==3.9.1
