--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,23 @@
-# Core FastAPI stack (compatible versions)
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-multipart==0.0.6
-
-# HTTP client
 httpx==0.25.2
-
-# LangChain stack (v0.1.x - compatible with your imports)
+aiohttp==3.9.1
 langchain==0.1.20
 langchain-community==0.0.38
 langchain-text-splitters==0.0.1
-
-# Document processing (safe to update)
 PyMuPDF==1.26.3
 python-docx==1.1.0
 docx2txt==0.8
-
-# AI/ML stack
-sentence-transformers==2.2.2  # This includes CrossEncoder functionality
+sentence-transformers==2.2.2
 transformers==4.36.2
 torch==2.1.2
 openai>=1.35.0
 huggingface-hub==0.19.4
-
-# Search and ranking
 rank-bm25==0.2.2
-# REMOVED: cross-encoder>=1.2.0  # This line was causing the error
-
-# Data processing
 numpy==1.24.4
 pandas==2.1.4
 scikit-learn==1.3.2
-
-# Utilities
 python-dotenv==1.0.0
 pydantic==2.5.2
 requests==2.31.0
@@ -40,8 +25,7 @@ psutil==5.9.6
 tiktoken==0.5.2
 aiofiles==23.2.1
 cachetools==5.3.2
-
-# Vector/Cache stores (compatible versions)
 pinecone-client==2.2.4
 redis==5.0.1
-aiohttp==3.9.1
+python-magic==0.4.27
+python-magic-bin==0.4.14
