--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ httpx==0.25.2
 aiohttp==3.9.1
 langchain==0.1.20
 langchain-community==0.0.38
+langchain-pinecone==0.1.0
 langchain-text-splitters==0.0.1
 PyMuPDF==1.26.3
 docx2txt==0.8
@@ -15,11 +16,11 @@ torch==2.1.2
 openai==1.12.0
 huggingface-hub==0.19.4
 rank-bm25==0.2.2
-pinecone-client==2.2.4
+pinecone-client==3.0.0
 numpy==1.24.4
 pandas==2.1.4
 scikit-learn==1.3.2
-tiktoken==0.5.2
+tiktoken==0.6.0
 cachetools==5.3.2
 redis==5.0.1
 python-dotenv==1.0.0
