--- a/requirements.txt
+++ b/requirements.txt
@@ -2,29 +2,24 @@ fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-multipart==0.0.6
 httpx==0.25.2
-aiohttp==3.9.1
 langchain==0.1.20
 langchain-community==0.0.38
 langchain-text-splitters==0.0.1
 PyMuPDF==1.26.3
 docx2txt==0.8
-python-magic==0.4.27
 sentence-transformers==2.2.2
 transformers==4.36.2
 torch==2.1.2
 openai==1.12.0
 huggingface-hub==0.19.4
 rank-bm25==0.2.2
-pinecone-client==2.2.4
 numpy==1.24.4
-pandas==2.1.4
 scikit-learn==1.3.2
 tiktoken==0.6.0
-cachetools==5.3.2
-redis==5.0.1
-python-dotenv==1.0.0
 pydantic==2.5.2
-requests==2.31.0
-psutil==5.9.6
-aiofiles==23.2.1
 faiss-cpu==1.7.4
+
+# Optional: Keep these if you want to maintain compatibility
+# python-magic==0.4.27  # Only if you want enhanced file type detection
+# requests==2.31.0      # Only if needed elsewhere
+# psutil==5.9.6         # Only if you want system monitoring
