--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,45 @@
+# Core FastAPI and web dependencies
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-multipart==0.0.6
 httpx==0.25.2
+
+# LangChain dependencies
 langchain==0.1.20
 langchain-community==0.0.38
 langchain-text-splitters==0.0.1
+
+# Document processing
 PyMuPDF==1.26.3
 docx2txt==0.8
+
+# AI and embeddings
 sentence-transformers==2.2.2
 transformers==4.36.2
 torch==2.1.2
 openai==1.12.0
 huggingface-hub==0.19.4
+
+# Search and retrieval
 rank-bm25==0.2.2
-numpy==1.24.4
-scikit-learn==1.3.2
-tiktoken==0.6.0
-pydantic==2.5.2
 faiss-cpu==1.7.4
 
+# Core computation
+numpy==1.24.4
+scikit-learn==1.3.2
+
+# Token counting
+tiktoken==0.6.0
+
+# Data validation
+pydantic==2.5.2
+
+# ADDED: Required for hackrx6.py caching system
+cachetools==5.3.2
+
+# Optional: Enhanced file type detection (already in your code)
+python-magic==0.4.27
+
 # Optional: Keep these if you want to maintain compatibility
-# python-magic==0.4.27  # Only if you want enhanced file type detection
 # requests==2.31.0      # Only if needed elsewhere
 # psutil==5.9.6         # Only if you want system monitoring
