--- a/requirements.txt
+++ b/requirements.txt
@@ -13,10 +13,10 @@ langchain-text-splitters==0.0.1
 PyMuPDF==1.26.3
 docx2txt==0.8
 
-# AI and embeddings
+# AI and embeddings - FIXED VERSIONS
 sentence-transformers==2.2.2
-transformers==4.36.2
-torch==2.1.2
+transformers==4.30.2
+torch==2.0.1
 openai==1.12.0
 huggingface-hub==0.19.4
 
@@ -24,7 +24,7 @@ huggingface-hub==0.19.4
 rank-bm25==0.2.2
 faiss-cpu==1.7.4
 
-# Core computation
+# Core computation - FIXED VERSION
 numpy==1.24.4
 scikit-learn==1.3.2
 
