--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ langchain-text-splitters==0.0.1
 PyMuPDF==1.26.3
 docx2txt==0.8
 
-# AI and embeddings - FIXED VERSIONS
+# AI and embeddings - FIXED COMPATIBLE VERSIONS
 sentence-transformers==2.2.2
 transformers==4.30.2
 torch==2.0.1
@@ -24,7 +24,7 @@ huggingface-hub==0.19.4
 rank-bm25==0.2.2
 faiss-cpu==1.7.4
 
-# Core computation - FIXED VERSION
+# Core computation
 numpy==1.24.4
 scikit-learn==1.3.2
 
@@ -34,8 +34,8 @@ tiktoken==0.6.0
 # Data validation
 pydantic==2.5.2
 
-# REQUIRED: Caching system
+# Caching system
 cachetools==5.3.2
 
-# REQUIRED: Enhanced file type detection
+# File type detection
 python-magic==0.4.27
