--- a/requirements.txt
+++ b/requirements.txt
@@ -13,18 +13,18 @@ langchain-text-splitters==0.0.1
 PyMuPDF==1.26.3
 docx2txt==0.8
 
-# AI and embeddings - FIXED COMPATIBLE VERSIONS
+# AI and embeddings - CORRECTED COMPATIBLE VERSIONS
 sentence-transformers==2.2.2
-transformers==4.30.2
-torch==2.0.1
+transformers==4.21.3
+torch==1.13.1
 openai==1.12.0
-huggingface-hub==0.19.4
+huggingface-hub==0.16.4
 
 # Search and retrieval
 rank-bm25==0.2.2
 faiss-cpu==1.7.4
 
-# Core computation
+# Core computation - DOWNGRADED FOR COMPATIBILITY
 numpy==1.24.4
 scikit-learn==1.3.2
 
