--- a/requirements.txt
+++ b/requirements.txt
@@ -13,10 +13,10 @@ langchain-text-splitters==0.0.1
 PyMuPDF==1.26.3
 docx2txt==0.8
 
-# AI and embeddings (Compatible versions)
+# AI and embeddings (FIXED VERSIONS)
 sentence-transformers==2.2.2
-transformers==4.36.2
-# PyTorch will be installed separately in Dockerfile for CPU compatibility
+transformers==4.35.2
+# PyTorch handled separately in Dockerfile
 openai==1.12.0
 huggingface-hub==0.19.4
 
@@ -42,3 +42,4 @@ python-magic==0.4.27
 
 # Additional dependencies for compatibility
 psutil==5.9.6
+safetensors==0.4.0
