--- a/requirements.txt
+++ b/requirements.txt
@@ -34,31 +34,11 @@ tiktoken==0.6.0
 # Data validation
 pydantic==2.5.2
 
-# REQUIRED: Caching system
+# Caching system
 cachetools==5.3.2
 
-# REQUIRED: Enhanced file type detection
+# Enhanced file type detection
 python-magic==0.4.27
 
-# MISSING REQUIREMENTS - ADDED BASED ON CODE ANALYSIS:
 # System monitoring and memory management
 psutil==5.9.6
-
-# Standard library enhancements (usually included but explicit for Docker)
-asyncio
-threading
-collections
-contextlib
-functools
-hashlib
-json
-logging
-os
-re
-sys
-tempfile
-time
-typing
-urllib
-uuid
-datetime
