--- a/requirements.txt
+++ b/requirements.txt
@@ -13,12 +13,13 @@ langchain-text-splitters==0.0.1
 PyMuPDF==1.26.3
 docx2txt==0.8
 
-# AI and embeddings
+# AI and embeddings - UPDATED COMPATIBLE VERSIONS
 sentence-transformers==2.2.2
-transformers==4.36.2
-torch==2.1.2
+transformers==4.35.2
+torch==2.2.0
 openai==1.12.0
 huggingface-hub==0.19.4
+safetensors==0.4.0
 
 # Search and retrieval
 rank-bm25==0.2.2
