--- a/requirements.txt
+++ b/requirements.txt
@@ -13,13 +13,12 @@ langchain-text-splitters==0.0.1
 PyMuPDF==1.26.3
 docx2txt==0.8
 
-# AI and embeddings - UPDATED COMPATIBLE VERSIONS
+# AI and embeddings
 sentence-transformers==2.2.2
-transformers==4.35.2
-torch==2.2.0
+transformers==4.36.2
+torch==2.1.2
 openai==1.12.0
 huggingface-hub==0.19.4
-safetensors==0.4.0
 
 # Search and retrieval
 rank-bm25==0.2.2
@@ -35,11 +34,8 @@ tiktoken==0.6.0
 # Data validation
 pydantic==2.5.2
 
-# Caching system
+# REQUIRED: Caching system
 cachetools==5.3.2
 
-# Enhanced file type detection
+# REQUIRED: Enhanced file type detection
 python-magic==0.4.27
-
-# System monitoring and memory management
-psutil==5.9.6
