--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,30 @@
-# Core FastAPI and web dependencies
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-python-multipart==0.0.6
-httpx==0.25.2
+# DO NOT include torch, torchvision, torchaudio, transformers, sentence-transformers here
+# They are installed separately in Dockerfile with exact versions
 
-# LangChain dependencies
-langchain==0.1.20
-langchain-community==0.0.38
-langchain-text-splitters==0.0.1
+# FastAPI and web
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+python-multipart
 
-# Document processing
-PyMuPDF==1.26.3
-docx2txt==0.8
+# LangChain
+langchain>=0.0.350
+langchain-community>=0.0.10
+langchain-text-splitters>=0.0.1
+langchain-core>=0.1.50
 
-# AI and embeddings
-sentence-transformers==2.2.2
-transformers==4.36.2
-torch==2.1.2
-openai==1.12.0
-huggingface-hub==0.19.4
+# Vector stores and retrieval
+faiss-cpu>=1.7.4
+rank-bm25>=0.2.2
 
-# Search and retrieval
-rank-bm25==0.2.2
-faiss-cpu==1.7.4
-
-# Core computation
-numpy==1.24.4
-scikit-learn==1.3.2
-
-# Token counting
-tiktoken==0.6.0
-
-# Data validation
-pydantic==2.5.2
-
-# REQUIRED: Caching system
-cachetools==5.3.2
-
-# REQUIRED: Enhanced file type detection
-python-magic==0.4.27
+# Utilities
+numpy>=1.24.0
+httpx>=0.25.0
+tiktoken>=0.5.0
+python-magic>=0.4.27
+PyMuPDF>=1.23.0
+docx2txt>=0.8
+cachetools>=5.3.0
+openai>=1.3.0
+scipy>=1.10.0
+scikit-learn>=1.3.0
+nltk>=3.8.0
