--- a/requirements.txt
+++ b/requirements.txt
@@ -13,10 +13,15 @@ langchain-text-splitters==0.0.1
 PyMuPDF==1.26.3
 docx2txt==0.8
 
-# AI and embeddings
+# AI and embeddings - UPDATED VERSIONS
 sentence-transformers==2.2.2
 transformers==4.36.2
-torch==2.1.2
+
+# UPDATED: Compatible PyTorch versions
+torch==2.3.1
+torchvision==0.18.1
+torchaudio==2.3.1
+
 openai==1.12.0
 huggingface-hub==0.19.4
 
@@ -40,5 +45,5 @@ cachetools==5.3.2
 # REQUIRED: Enhanced file type detection
 python-magic==0.4.27
 
-# REQUIRED: Memory management (MISSING IN YOUR CURRENT FILE)
+# REQUIRED: Memory management
 psutil==5.9.6
